# dev-health-bot

./: README.md  README.ru.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/dev_health_bot/: __init__.py  checks.py  cli.py
tests/: test_checks.py  test_cli.py
