[project]
name = "dev-health-bot"
version = "0.1.0"
requires-python = ">=3.10"
description = "Repository health scanner for CI and local checks"

[project.scripts]
dev-health-bot = "dev_health_bot.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
